--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Prework Study Guide</title>
   </head>
-  
+
   <body>
     <header id="header">
       <h1>Prework Study Guide</h1>
@@ -40,7 +40,7 @@
      <section class="card" id="javascript-section">
       <h2>JavaScript</h2>
       <ul>
-        <li>Enter your JavaScript notes here</li>
+        <li>Enter your JavaScript notes here.</li>
       </ul>
      </section>
     </main>
